[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "b02ab41cf66e2be757f0247b5934c2f33fd797eb", features=["tree"] }
gloo = "0.8"
wasm-bindgen = "0.2"
log = "0.4"
web-sys = "0.3"
wasm-logger = "0.2"
yew-nested-router = "0.2"
